--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "debug": "3.1.0",
+    "downshift": "^1.14.0",
     "flexboxgrid": "^6.3.1",
     "freactal": "^1.1.1",
     "glamor": "^2.20.40",
@@ -39,6 +40,7 @@
     "@types/react": "^16.0.10",
     "@types/react-dom": "^16.0.1",
     "@types/storybook__react": "^3.0.5",
+    "lorem-ipsum": "^1.0.4",
     "tslint": "4.5.1"
   },
   "prettier": {
