--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "debug": "3.1.0",
     "flexboxgrid": "^6.3.1",
     "freactal": "^1.1.1",
     "glamor": "^2.20.40",
