--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "@types/node": "^8.0.33",
     "@types/react": "^16.0.10",
     "@types/react-dom": "^16.0.1",
-    "@types/storybook__react": "^3.0.5"
+    "@types/storybook__react": "^3.0.5",
+    "tslint": "4.5.1"
   },
   "prettier": {
     "trailingComma": "all",
