--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "flexboxgrid": "^6.3.1",
     "freactal": "^1.1.1",
     "glamor": "^2.20.40",
+    "jwt-decode": "2.2.0",
     "prettier": "1.7.4",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
