setup for facebook login

--- a/.env.schema
+++ b/.env.schema
@@ -1,3 +1,4 @@
 PORT=[port to run the portal on]
 REACT_APP_API=[url of the API]
 REACT_APP_DEBUG=[logs to output]
+REACT_APP_FACEBOOK_APP_ID=[appId for the facebook SDK]
