--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "build": "NODE_PATH=src react-scripts-ts build",
     "test": "NODE_PATH=src react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "REACT_APP_DUMMY=true start-storybook -p 6006",
+    "build-storybook": "REACT_APP_DUMMY=true build-storybook",
     "build-with-storybook":
       "npm run build && npm run build-storybook && mv storybook-static build/storybook"
   },
