--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts-ts": "2.7.0",
     "react-sizeme": "^2.3.6",
     "react-table": "^6.6.0",
+    "react-truncate": "^2.2.2",
     "recompose": "^0.26.0",
     "semantic-ui-css": "2.2.12",
     "semantic-ui-react": "0.75.0",
@@ -33,8 +34,7 @@
     "eject": "react-scripts-ts eject",
     "storybook": "REACT_APP_DUMMY=true start-storybook -p 6006",
     "build-storybook": "REACT_APP_DUMMY=true build-storybook",
-    "build-with-storybook":
-      "npm run build && npm run build-storybook && mv storybook-static build/storybook"
+    "build-with-storybook": "npm run build && npm run build-storybook && mv storybook-static build/storybook"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.2.12",
