--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts-ts": "2.7.0",
     "react-sizeme": "^2.3.6",
     "react-table": "^6.6.0",
+    "react-transition-group-plus": "^0.5.2",
     "react-truncate": "^2.2.2",
     "recompose": "^0.26.0",
     "semantic-ui-css": "2.2.12",
