--- a/.env.schema
+++ b/.env.schema
@@ -2,3 +2,4 @@ PORT=[port to run the portal on]
 REACT_APP_API=[url of the API]
 REACT_APP_DEBUG=[logs to output]
 REACT_APP_FACEBOOK_APP_ID=[appId for the facebook SDK]
+REACT_APP_GOOGLE_APP_ID=[app id]
