--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-google-login": "^2.11.3",
+    "react-gravatar": "^2.6.3",
     "react-intl": "^2.4.0",
+    "react-onclickoutside": "^6.6.3",
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.7.0",
     "react-sizeme": "^2.3.6",
