make .env.schema easier to follow

--- a/.env.schema
+++ b/.env.schema
@@ -1,5 +1,7 @@
-PORT=[port to run the portal on]
-REACT_APP_API=[url of the API]
-REACT_APP_DEBUG=[logs to output]
-REACT_APP_FACEBOOK_APP_ID=[appId for the facebook SDK]
-REACT_APP_GOOGLE_APP_ID=[app id]
+PORT=3501
+REACT_APP_API=https://...
+REACT_APP_FACEBOOK_APP_ID=
+REACT_APP_GOOGLE_APP_ID=
+
+# debug namespace, e.g. "app". See https://www.npmjs.com/package/debug
+REACT_APP_DEBUG=app
