--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react-dom": "^16.0.1",
     "@types/storybook__react": "^3.0.5",
     "lorem-ipsum": "^1.0.4",
+    "nodemon": "^1.12.1",
     "tslint": "4.5.1"
   },
   "prettier": {
