--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "ts-loader": "^2.3.7"
   },
   "scripts": {
-    "start": "NODE_PATH=src react-scripts-ts start",
+    "start": "NODE_PATH=src nodemon --watch .env --exec npm run dev",
+    "dev": "NODE_PATH=src react-scripts-ts start",
     "build": "NODE_PATH=src react-scripts-ts build",
     "test": "NODE_PATH=src react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
